[gd_scene load_steps=4 format=2]

[ext_resource path="res://accountSystem.gd" type="Script" id=1]
[ext_resource path="res://F928pBaWwAAW32I.jpeg" type="Texture" id=2]
[ext_resource path="res://stuff.tres" type="DynamicFont" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 2.0
script = ExtResource( 1 )

[node name="F928pBaWwAaw32i" type="Sprite" parent="."]
position = Vector2( 426, 268 )
scale = Vector2( 1.11759, 1.10855 )
texture = ExtResource( 2 )

[node name="LogPromptOverlay" type="ColorRect" parent="."]
margin_top = -212.0
margin_right = 550.0
margin_bottom = 586.0
rect_rotation = 17.7416
color = Color( 0.54902, 0.54902, 0.54902, 1 )

[node name="SignUp" type="Button" parent="."]
margin_left = 205.0
margin_top = 276.0
margin_right = 345.0
margin_bottom = 302.0
text = "Sign Up"

[node name="SignIn" type="Button" parent="."]
margin_left = 48.0
margin_top = 275.0
margin_right = 188.0
margin_bottom = 303.0
text = "Sign In"

[node name="Username" type="LineEdit" parent="."]
margin_left = 47.0
margin_top = 183.0
margin_right = 345.0
margin_bottom = 212.0

[node name="Password" type="LineEdit" parent="."]
margin_left = 47.0
margin_top = 235.0
margin_right = 345.0
margin_bottom = 264.0
secret = true

[node name="usernamelabel" type="Label" parent="."]
margin_left = 53.0
margin_top = 161.0
margin_right = 123.0
margin_bottom = 175.0
text = "Username:"

[node name="passwordlabel" type="Label" parent="."]
margin_left = 53.0
margin_top = 217.0
margin_right = 123.0
margin_bottom = 231.0
text = "Password:"

[node name="Label" type="Label" parent="."]
margin_left = 47.0
margin_top = 76.0
margin_right = 358.0
margin_bottom = 137.0
custom_fonts/font = ExtResource( 3 )
text = "Get more out of GXNetworks With an Account."
autowrap = true

[node name="errorText" type="Label" parent="."]
margin_left = 49.0
margin_top = 322.0
margin_right = 341.0
margin_bottom = 351.0
custom_fonts/font = ExtResource( 3 )
text = "Error: Server Not Accessable"
autowrap = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="button_up" from="SignUp" to="." method="_on_SignUp_button_release"]
[connection signal="button_up" from="SignIn" to="." method="_on_SignIn_button_release"]
[connection signal="text_changed" from="Username" to="." method="_on_Username_text_changed"]
[connection signal="text_changed" from="Password" to="." method="_on_Password_text_changed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
